syntax = "proto3";

option go_package = "./chatpb";

package chatpb;

service ChatService {
    rpc JoinChannel(Channel) returns (stream Message) {}
    rpc SendMessage(stream Message) returns (MessageAck) {}
}

message Channel {
    string name = 1;
    string senders_name = 2;
    repeated int32 clock = 3;
}

message Message {
    string sender = 1;
    Channel channel = 2;
    string message = 3;
    int32 id = 4;
}

message MessageAck {
    string status = 1;
}




